[package]
name = "quic_send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
bincode = "1.3.3"
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_derive = "1.0.103"
solana-sdk = "1.18.14"
solana-client = "1.18.14"
solana-cli = "1.18.14"
solana-gossip = "1.18.14"
solana-streamer = "1.18.14"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
bs58 = "0.4.0"
anyhow = "1.0.86"
dashmap = "5.2"
once_cell = "1.17"
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json"] }